# myCalculator

./: myCalculator.sln
CalculatorTests/: CalculatorTests.vcxproj  gevb.cpp
UIcomponents/: Button.cpp  Buttons.cpp  DisplayText.cpp  UIController.cpp  Window.cpp
myCalculator/: Button.h  Buttons.h  CMakeLists.txt  Calculate.cpp  Calculate.h  CalculateFromRPN.cpp  CalculateFromRPN.h  CalculationEngine.cpp  CalculationEngine.h  Calculator.cpp  Calculator.h  Calculator.hpp  CalculatorFunctions.cpp  CalculatorFunctions.h  DisplayText.h  DivisionByZeroException.cpp  DivisionByZeroException.h  IAlgorithm.h  ICalculate.h  ReversePolishNotation.cpp  ReversePolishNotation.h  RpnAlgorithm.cpp  RpnAlgorithm.h  RpnStrategy.cpp  RpnStrategy.h  Separator.cpp  Separator.h  Strategy.h  Test.cpp  Test.h  UICalculator.cpp  UIController.h  Window.h  main.cpp  mathExpression.cpp  mathExpression.h  myCalculator.cpp  myCalculator.vcxproj  myCalculator.vcxproj.filters  resource.h
